--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script>
     // === 必要に応じて編集 ==========================
     const PORTAL_INDEX = "https://da-i-go.github.io/STATlms-home/"; // 全体サイトの index.html
-    const DEST_PATIENT = "./patient.html"; // この症例リポ内の patient.html
+    const DEST_PATIENT = "./patient4-1.html"; // この症例リポ内の patient.html
     // ==============================================
 
     (function () {
